# OSBot-GitHub-Actions

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/actions/_deprecated/run-unit-tests/: action.yml
.github/actions/aws__publish-code-artifactory/: action.yml
.github/actions/aws__publish__ecr/: action.yml
.github/actions/aws__publish__s3_via_cloudfront/: action.yml
.github/actions/docker-hub__publish/: action.yml
.github/actions/docker___dynamo_db/: action.yml
.github/actions/docker__local-stack/: action.yml
.github/actions/docker__minio/: action.yml
.github/actions/docker_local-stack/: action.yml
.github/actions/git__increment-tag/: action.yml
.github/actions/git__read_version/: action.yml
.github/actions/github__increment-tag/: action.yml
.github/actions/increment-tag/: action.yml
.github/actions/increment-tag-main/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/install-dependencies-poetry/: action.yml
.github/actions/install-dependencies-pytest/: action.yml
.github/actions/poetry__install/: action.yml
.github/actions/poetry__run-unit-tests/: action.yml
.github/actions/publish-to-pypi/: action.yml
.github/actions/pypi__publish/: action.yml
.github/actions/pypi__wait-for-publish/: action.yml
.github/actions/run-unit-tests/: action.yml
.github/workflows/: ci-pipeline-dev.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml  increment-tag-main.yml  publish-to-pypi.yml  run-unit-tests.yml
.github/workflows_old/: publish-to-pypi.yml  run-unit-tests.yml
deploy/docker/osbot_github_actions__from_pip/: Dockerfile  docker-compose.yml
osbot_github_actions/utils/: Version.py
osbot_xyz/utils/utils/: Version.py
tests/: test_pyproject_toml.py
tests/unit/: test_Version.py  test_pyproject_toml.py  test_setup.py
